@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.020;
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 use utf8;
 use DateTime;
@@ -413,7 +413,7 @@ B<motis-m> [B<-s> I<service>] B<?>I<query>|I<lat>B<:>I<lon>
 
 =head1 VERSION
 
-version 0.02
+version 0.03
 
 =head1 DESCRIPTION
 
